[GStreamer] gst_element_get_state: assertion 'GST_IS_ELEMENT (element)' failed in WebCore::MediaPlayerPrivateGStreamer::paused https://bugs.webkit.org/show_bug.cgi?id=196691

Reviewed by Eric Carlson.

Source/WebCore:

For gif assets, fail media loading early and notify the
MediaPlayer by setting both network and ready states, so that the
MediaPlayer will try with with the next media engine or pass the
error to HTMLMediaElement if there are none.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::loadFull):
(WebCore::MediaPlayerPrivateGStreamer::loadingFailed):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

LayoutTests:

Unflag test no longer crashing.

* platform/gtk/TestExpectations:
* platform/gtk/fast/replaced/border-radius-clip-expected.txt:

Canonical link: https://commits.webkit.org/211481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244641 268f45cc-cd09-0410-ab3c-d52691b4dbfc